Fix alignment.
 Label & select on status bar
 Overrides checkboxes.
 Filter panel search field and multi-select

BUG=342289

Review URL: https://codereview.chromium.org/142733003

git-svn-id: svn://svn.chromium.org/blink/trunk@166922 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/filter.css
+++ b/front_end/filter.css
@@ -52,7 +52,7 @@
 .filter-bitset-filter li {
     display: inline-block;
     margin: auto 2px;
-    padding: 4px 6px;
+    padding: 4px 6px 3px 6px;
     background: transparent;
     text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0;
     border-radius: 8px;
